tests/dataset/tpc-ds/compiler/c/q11.error
/tmp/TestCCompiler_TPCDS_Goldenq111214850679/001/prog.c:107:35: error: unknown type name ‘list_map_string’; did you mean ‘list_string’?
  107 | static void _json_list_map_string(list_map_string v) {
      |                                   ^~~~~~~~~~~~~~~
      |                                   list_string
/tmp/TestCCompiler_TPCDS_Goldenq111214850679/001/prog.c: In function ‘test_TPCDS_Q11_growth’:
/tmp/TestCCompiler_TPCDS_Goldenq111214850679/001/prog.c:251:35: error: request for member ‘len’ in something not a structure or union
  251 |   if (test_TPCDS_Q11_growth_result.len != tmp1.len) {
      |                                   ^
/tmp/TestCCompiler_TPCDS_Goldenq111214850679/001/prog.c:251:47: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  251 |   if (test_TPCDS_Q11_growth_result.len != tmp1.len) {
      |                                               ^
      |                                               ->
/tmp/TestCCompiler_TPCDS_Goldenq111214850679/001/prog.c:254:55: error: request for member ‘len’ in something not a structure or union
  254 |     for (int i3 = 0; i3 < test_TPCDS_Q11_growth_result.len; i3++) {
      |                                                       ^
/tmp/TestCCompiler_TPCDS_Goldenq111214850679/001/prog.c:255:39: error: request for member ‘data’ in something not a structure or union
  255 |       if (test_TPCDS_Q11_growth_result.data[i3] != tmp1.data[i3]) {
      |                                       ^
/tmp/TestCCompiler_TPCDS_Goldenq111214850679/001/prog.c:255:56: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  255 |       if (test_TPCDS_Q11_growth_result.data[i3] != tmp1.data[i3]) {
      |                                                        ^
      |                                                        ->
/tmp/TestCCompiler_TPCDS_Goldenq111214850679/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq111214850679/001/prog.c:341:7: error: conflicting types for ‘result’; have ‘int’
  341 |   int result = (growth_ok ? result : tmp16);
      |       ^~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq111214850679/001/prog.c:336:12: note: previous definition of ‘result’ with type ‘result_t[1]’
  336 |   result_t result[] = {(result_t){.customer_id = "C1",
      |            ^~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq111214850679/001/prog.c:342:3: warning: implicit declaration of function ‘_json_list_map_string’; did you mean ‘_json_list_string’? [-Wimplicit-function-declaration]
  342 |   _json_list_map_string(result);
      |   ^~~~~~~~~~~~~~~~~~~~~
      |   _json_list_string
