tests/dataset/tpc-ds/compiler/c/q11.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:36Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:36Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _sum_float(list_float v) {
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_map_string(list_map_string v) {
  if (v.len == 1) {
    _json_map_string(v.data[0]);
    return;
  }
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_map_string(v.data[i]);
  }
  printf("]");
}
typedef struct Customer Customer;
typedef struct StoreSale StoreSale;
typedef struct WebSale WebSale;

typedef struct {
  const char *customer_id;
  const char *customer_first_name;
  const char *customer_last_name;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_customer_sk;
  const char *c_customer_id;
  const char *c_first_name;
  const char *c_last_name;
} customer_t;

typedef struct {
  int ss_customer_sk;
  int ss_sold_date_sk;
  double ss_ext_list_price;
} store_sale_t;

typedef struct {
  int ws_bill_customer_sk;
  int ws_sold_date_sk;
  double ws_ext_list_price;
} web_sale_t;

typedef struct {
  const char *customer_id;
  const char *customer_first_name;
  const char *customer_last_name;
} result_t;
typedef struct {
  int len;
  result_t *data;
} result_list_t;
result_list_t create_result_list(int len) {
  result_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Customer {
  int c_customer_sk;
  char *c_customer_id;
  char *c_first_name;
  char *c_last_name;
} Customer;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct StoreSale {
  int ss_customer_sk;
  int ss_sold_date_sk;
  double ss_ext_list_price;
} StoreSale;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct WebSale {
  int ws_bill_customer_sk;
  int ws_sold_date_sk;
  double ws_ext_list_price;
} WebSale;
typedef struct {
  int len;
  web_sale_t *data;
} web_sale_list_t;
web_sale_list_t create_web_sale_list(int len) {
  web_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static int test_TPCDS_Q11_growth_result;
static void test_TPCDS_Q11_growth() {
  tmp1_t tmp1[] = {(tmp1_t){.customer_id = "C1",
                            .customer_first_name = "John",
                            .customer_last_name = "Doe"}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q11_growth_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q11_growth_result.len; i3++) {
      if (test_TPCDS_Q11_growth_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  customer_t customer[] = {(customer_t){.c_customer_sk = 1,
                                        .c_customer_id = "C1",
                                        .c_first_name = "John",
                                        .c_last_name = "Doe"}};
  int customer_len = sizeof(customer) / sizeof(customer[0]);
  store_sale_t store_sales[] = {(store_sale_t){.ss_customer_sk = 1,
                                               .ss_sold_date_sk = 1998,
                                               .ss_ext_list_price = 60.0},
                                (store_sale_t){.ss_customer_sk = 1,
                                               .ss_sold_date_sk = 1999,
                                               .ss_ext_list_price = 90.0}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  web_sale_t web_sales[] = {(web_sale_t){.ws_bill_customer_sk = 1,
                                         .ws_sold_date_sk = 1998,
                                         .ws_ext_list_price = 50.0},
                            (web_sale_t){.ws_bill_customer_sk = 1,
                                         .ws_sold_date_sk = 1999,
                                         .ws_ext_list_price = 150.0}};
  int web_sales_len = sizeof(web_sales) / sizeof(web_sales[0]);
  list_float tmp4 = list_float_create(store_sales_len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < store_sales_len; tmp6++) {
    store_sale_t ss = store_sales[tmp6];
    if (!(ss.ss_sold_date_sk == 1998)) {
      continue;
    }
    tmp4.data[tmp5] = ss.ss_ext_list_price;
    tmp5++;
  }
  tmp4.len = tmp5;
  double ss98 = _sum_float(tmp4);
  list_float tmp7 = list_float_create(store_sales_len);
  int tmp8 = 0;
  for (int tmp9 = 0; tmp9 < store_sales_len; tmp9++) {
    store_sale_t ss = store_sales[tmp9];
    if (!(ss.ss_sold_date_sk == 1999)) {
      continue;
    }
    tmp7.data[tmp8] = ss.ss_ext_list_price;
    tmp8++;
  }
  tmp7.len = tmp8;
  double ss99 = _sum_float(tmp7);
  list_float tmp10 = list_float_create(web_sales_len);
  int tmp11 = 0;
  for (int tmp12 = 0; tmp12 < web_sales_len; tmp12++) {
    web_sale_t ws = web_sales[tmp12];
    if (!(ws.ws_sold_date_sk == 1998)) {
      continue;
    }
    tmp10.data[tmp11] = ws.ws_ext_list_price;
    tmp11++;
  }
  tmp10.len = tmp11;
  double ws98 = _sum_float(tmp10);
  list_float tmp13 = list_float_create(web_sales_len);
  int tmp14 = 0;
  for (int tmp15 = 0; tmp15 < web_sales_len; tmp15++) {
    web_sale_t ws = web_sales[tmp15];
    if (!(ws.ws_sold_date_sk == 1999)) {
      continue;
    }
    tmp13.data[tmp14] = ws.ws_ext_list_price;
    tmp14++;
  }
  tmp13.len = tmp14;
  double ws99 = _sum_float(tmp13);
  int growth_ok = ws98 > 0 && ss98 > 0 && (ws99 / ws98) > (ss99 / ss98);
  result_t result[] = {(result_t){.customer_id = "C1",
                                  .customer_first_name = "John",
                                  .customer_last_name = "Doe"}};
  int result_len = sizeof(result) / sizeof(result[0]);
  list_int tmp16 = list_int_create(0);
  int result = (growth_ok ? result : tmp16);
  _json_list_map_string(result);
  test_TPCDS_Q11_growth_result = result;
  test_TPCDS_Q11_growth();
  free(tmp4.data);
  free(tmp7.data);
  free(tmp10.data);
  free(tmp13.data);
  return 0;
}
